--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
             otp: "26.0"
           - elixir: "1.16"
             otp: "26.2"
-          - elixir: "1.16"
-            otp: "27.0-rc3"
+          - elixir: "1.17"
+            otp: "27.0"
+          - elixir: "1.18"
+            otp: "27.0"
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
