--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
             otp: "27.0"
           - elixir: "1.18"
             otp: "27.0"
+          - elixir: "1.19"
+            otp: "28.1"
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
